--- a/src/less/pages/landing.less
+++ b/src/less/pages/landing.less
@@ -129,7 +129,7 @@ section.landing-hero {
 							list-style: none;
 						
 							.suggestion-item {
-								height: 44px;
+								min-height: 44px;
 								padding: 13px 16px;
 								overflow: hidden ;
 								text-overflow: ellipsis;
@@ -232,6 +232,17 @@ section.landing-hero {
 						margin: 0 !important;
 						padding: 0 8px;
 						box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.16) !important;
+						
+						.suggestions {
+							left: 0;
+							z-index: 50;
+						}
+						
+						.calendar {
+							left: 0;
+							width: 100%;
+							z-index: 5;
+						}
 					}
 				}
 				
